version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/CDB/CMEDITCommand.rst.txt
.. vale off



:class:`CMEDITCommand`
======================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.CDB.CMEDITCommand

   Bases: :py:obj:`object`


   
   Represents a CMEDIT command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CMEDITCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Aname`
            - Gets the assembly name.
          * - :py:attr:`~Cnames`
            - Gets the component names.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Oper`
            - Gets the operation label (add or dele).







Property detail
---------------
.. py:property:: Aname
   :type: Optional[str]

   
   Gets the assembly name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Cnames
   :type: Optional[tuple[str]]

   
   Gets the component names.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]

   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]

   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Oper
   :type: Optional[str]

   
   Gets the operation label (add or dele).
















   ..
       !! processed by numpydoc !!







.. vale on