version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/CMEDITCommand.rst.txt
.. vale off



:class:`CMEDITCommand`
======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.CMEDITCommand(iCMEDITCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.ICMEDITCommand)

   Bases: :py:obj:`object`


   
   Represents a CMEDIT command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CMEDITCommand

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Aname`
            - Gets the assembly name.
          * - :py:attr:`~Cnames`
            - Gets the component names.
          * - :py:attr:`~FullName`
            - FullName property.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Oper`
            - Gets the operation label (add or dele).
          * - :py:attr:`~ToCdbCommandString`
            - Gets the command text formatted as a CDB file entry.







Property detail
---------------
.. py:property:: Aname
   :type: Optional[str]


   
   Gets the assembly name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Cnames
   :type: Optional[tuple[str]]


   
   Gets the component names.
















   ..
       !! processed by numpydoc !!

.. py:property:: FullName
   :type: Optional[str]


   
   FullName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Oper
   :type: Optional[str]


   
   Gets the operation label (add or dele).
















   ..
       !! processed by numpydoc !!

.. py:property:: ToCdbCommandString
   :type: Optional[Ansys.ACT.Automation.Mechanical.FE.CDB.CdbCommandFormatAndParameter]


   
   Gets the command text formatted as a CDB file entry.
   Gets the command parameters formatted as a string.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on